src/test/ui/issues/issue-40510-1.migrate.stderr
warning: captured variable cannot escape `FnMut` closure body
  --> $DIR/issue-40510-1.rs:11:9
   |
LL |     || {
   |      - inferred to be a `FnMut` closure
LL |         &mut x
   |         ^^^^^^ returns a reference to a captured variable which escapes the closure body
   |
   = note: `FnMut` closures only have access to their captured variables while they are executing...
   = note: ...therefore, they cannot allow references to captured variables to escape
   = warning: this error has been downgraded to a warning for backwards compatibility with previous releases
   = warning: this represents potential undefined behavior in your code and this warning will become a hard error in the future
   = note: for more information, try `rustc --explain E0729`

error: compilation successful
  --> $DIR/issue-40510-1.rs:20:1
   |
LL | fn main() {}
   | ^^^^^^^^^^^^

error: aborting due to previous error

