src/test/ui/issues/issue-40510-1.rs
// compile-pass
#![allow(unused)]

fn f() {
    let mut x: Box<()> = Box::new(());

    || {
        &mut x
    };
}


fn main() {}
